<resources>

    <string name="taller1">Taller1 - Kevin Ortiz</string>
    <string name="material">Material</string>
    <string name="dije">Dije</string>
    <string name="tipo">Tipo</string>
    <string name="moneda">Moneda</string>
    <string name="valor_x_und">Valor (X) Und</string>
    <string name="unidad">Unidad</string>
    <string name="valor">Valor</string>
    <string name="resultado">Resultado</string>
    <string name="calcular">Calcular</string>
    <string name="borrar">Borrar</string>
    <string name="cuero">Cuero</string>
    <string name="cuerda">Cuerda</string>
    <string name="martillo">Martillo</string>
    <string name="ancla">Ancla</string>
    <string name="plata">Plata</string>
    <string name="oro">Oro</string>
    <string name="oro_rosado">Oro Rosado</string>
    <string name="niquel">Niquel</string>
    <string name="co">CO</string>
    <string name="us">US</string>
    <string name="digite_cant">Digite Cantidad</string>
    <string name="error_eng">Por favor, escribe una cantidad</string>

    <string-array name="materiales">
        <item>@string/cuerda</item>
        <item>@string/cuero</item>
        </string-array>

    <string-array name="dijes">
        <item>@string/martillo</item>
        <item>@string/ancla</item>
    </string-array>

    <string-array name="tipos">
        <item>@string/plata</item>
        <item>@string/oro</item>
        <item>@string/oro_rosado</item>
        <item>@string/niquel</item>
    </string-array>

    <string-array name="monedas">
        <item>@string/co</item>
        <item>@string/us</item>
    </string-array>

</resources>
